[tool.poetry]
name = "job-shop-lib"
version = "0.1.0"
description = "An easy-to-use and modular Python library for the Job Shop Scheduling Problem (JSSP)"
authors = ["Pabloo22 <pablete.arino@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "job_shop_lib"}]
include = ["benchmarks/benchmark_instances.json"]

[tool.poetry.dependencies]
python = "^3.10"
ortools = "^9.8.3296"
matplotlib = "^3.8.3"
pyarrow = "^15.0.0"  # An optional pandas' dependency that will be required in the future
networkx = "^3.2.1"
imageio = "^2.34.0"
pygraphviz = {version = "^1.12", optional = true}

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
pytest-mpl = "^0.17.0"

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
flake8 = "^7.0.0"
mypy = "^1.8.0"

[tool.poetry.group.notebooks]
optional = true

[tool.poetry.group.notebooks.dependencies]
ipykernel = "^6.29.2"
nbconvert = "^7.16.0"
numpy = "^1.26.4"
pandas = "^2.2.1"

[tool.poetry.extras]
pygraphviz = ["pygraphviz"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

[tool.mypy]
files = ["job_shop_lib"]
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
