[tool.poetry]
name = "job-shop-lib"
version = "1.1.1"
description = "An easy-to-use and modular Python library for the Job Shop Scheduling Problem (JSSP)"
authors = ["Pabloo22 <pablete.arino@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "job_shop_lib"}]
include = ["job_shop_lib/benchmarking/benchmark_instances.json", "job_shop_lib/py.typed"]

[tool.poetry.dependencies]
python = "^3.10"
ortools = "^9.9"
matplotlib = "^3"
pyarrow = ">=15,<21"  # An optional pandas' dependency that will be required in the future
networkx = "^3"
imageio = {extras = ["ffmpeg"], version = "^2.34.1"}
pygraphviz = {version = "^1.12", optional = true}
numpy = ">=1.26.4,<3.0.0"
gymnasium = "^1.0.0"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^8.0.0"
pytest-cov = ">=4.1,<7.0"
pytest-mpl = "^0.17.0"

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
flake8 = "^7.0.0"
mypy = "^1.8.0"
pydoclint = {extras = ["flake8"], version = ">=0.5.9,<0.7.0"}

[tool.poetry.group.notebooks]
optional = true

[tool.poetry.group.notebooks.dependencies]
ipykernel = "^6.29.2"
nbconvert = "^7.16.0"
pandas = "^2.2.1"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^7.3.7"
furo = "^2024.5.6"
nbsphinx = "^0.9.4"
nbsphinx-link = "^1.3.0"
myst-parser = ">=3.0.1,<5.0.0"
pandoc = "^2.3"
pygments = "^2.18.0"
ipython = "^8.31.0"

[tool.poetry.extras]
pygraphviz = ["pygraphviz"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

[tool.mypy]
files = ["job_shop_lib"]
check_untyped_defs = true
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = false

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:google._upb._message:488",
    "ignore::DeprecationWarning:importlib._bootstrap:488"
]
